--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,7 +175,7 @@ nav ul li a.active {
     width: 100%;
     height: auto;
     max-width: 100%;
-    }
+}
 
 .blog-hero figcaption {
     font-size: 0.6rem;
@@ -306,7 +306,7 @@ nav ul li a.active {
 
 #footer {
     display: grid;
-     grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     gap: 20px;
     max-width: 96%;
     margin: 0 auto;
@@ -385,14 +385,6 @@ nav ul li a.active {
     }
 
     /* Blog styles */
-    .blog-top {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        align-items: center;
-        gap: 20px;
-        flex: 1;
-    }
 
     .blog-hero img {
         width: 100%;
@@ -406,32 +398,73 @@ nav ul li a.active {
         display: flex;
     }
 
-    /*
-        .blog-content.reverse {
-        flex-direction: row-reverse;
-    }
-    
-    .blog-content .text {
+    .blog-top {
+        padding-top: 30px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: end;
+        gap: 20px;
         flex: 1;
     }
-    
-    .blog-content .image {
+
+    .blog-top > div, .blog-top > figure {
+        flex-basis: 50%;
+        max-width: 50%;
+        box-sizing: border-box;
+    }
+
+    .blog-middle {
+        padding-top: 30px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: flex-start;
+        gap: 20px;
+        /*flex: 1;*/
+    }
+    .blog-middle > div {
+        flex-basis: 50%;
+        max-width: 50%;
+        box-sizing: border-box;
+    }
+
+    .blog-middle > figure {
+        flex-basis: 50%;
+        max-width: 50%;
+        box-sizing: border-box;
+    }
+
+    .blog-middle .method {
+        order: 1;
+    }
+
+    .blog-middle .blog-amazon {
+        order: 3;
+    }
+
+    .blog-middle .div2 {
+        order: 2;
+    }
+
+    .blog-middle2 {
+        padding-top: 30px;
+    }
+
+    .blog-middle3 {
+        padding-top: 30px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: start;
+        gap: 20px;
         flex: 1;
     }
-    
-    .blog-content .image img {
-        width: 95%;
-        border-radius: 8px;
+    .blog-middle3 > div, .blog-middle3 > figure {
+        flex-basis: 50%;
+        max-width: 50%;
+        box-sizing: border-box;
     }
-    
-    .blog-content ol,
-    .blog-content ul,
-    .blog-content.reverse ol,
-    .blog-content.reverse ul {
-        padding-left: 1em;
-        margin-left: 0em;
-        line-height: 1.4;
-    }*/
 
     /* Footer */
     .footer-bottom {
