--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,6 +155,11 @@ nav ul li a.active {
     max-height: 300px;
 }
 
+#home-blog a,
+#home-contact a {
+    text-decoration: none;
+}
+
 /* Blog specific styles */
 
 #blog.blog-content {
