--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,20 +7,16 @@
     padding: 0;
 }
 
-html,
 body {
     height: 100%;
     margin: 0;
     box-sizing: border-box;
-}
-
-body {
+    padding-top: 120px;
     display: flex;
     flex-direction: column;
-    font-family: "Inter", sans-serif;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(ffffff);
     color: #000000;
-    padding-top: 102px;
+    padding-top: 150px;
 }
 
 #hello {
@@ -51,13 +47,13 @@ header {
     z-index: 1000;
     background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);
     color: #ffffff;
-    padding: 10px 0;
+    padding: 10px 15px;
     box-shadow: 0 4px 6px rgba(255, 0, 119, 0.4);
 }
 
 .logo-round {
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: auto;
     border-radius: 50%;
     z-index: 2000;
     display: block;
@@ -67,23 +63,24 @@ header {
 header .container {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
-header a {
+#logo-text {
+    font-size: 1.2rem;
     text-decoration: none;
     color: #ffffff;
 }
 
 nav ul {
     list-style-type: none;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    margin: 0;
     padding: 0;
+    display: flex;
+    align-items: center;
 }
 
 nav ul li {
-    margin: 5px 0;
     position: relative;
 }
 
@@ -103,10 +100,12 @@ nav ul li a.active {
 .dropdown-content {
     display: none;
     position: absolute;
+    right: 0;
+    text-align: right;
     background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);
-    min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(255, 0, 119, 0.2);
     z-index: 1;
+    padding-top: 1.2rem;
 }
 
 .dropdown-content a {
@@ -114,6 +113,7 @@ nav ul li a.active {
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    text-align: right;
 }
 
 .dropdown-content a:hover {
@@ -153,6 +153,7 @@ nav ul li a.active {
     border-radius: 50%;
     max-width: 300px;
     max-height: 300px;
+    box-shadow: 0px 8px 16px 0px rgba(255, 0, 119, 0.5);
 }
 
 #home-blog a,
@@ -293,35 +294,32 @@ nav ul li a.active {
     transform: scale(1.05);
 }
 
-/* Check if this is specific to .contact-form (I don't think it is, it affected the headers... */
+/* Check if this is specific to .contact-form (I don't think it is, it affected the headers... 
 .container {
     width: 100%;
     padding: 0 15px;
     margin: 0 auto;
-}
+}*/
 
 /* Footer Styles */
 
-#footer {
-    background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);
-    padding: 20px 0;
-    color: #F9F9F9;
-    text-align: center;
+footer {
+    width: 100%;
+    font-size: 0.8rem;
+    background-color: #ff0077;
+    background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);    
 }
 
 #footer {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+
     max-width: 96%;
     margin: 0 auto;
-    font-size: 0.8rem;
+
+    color: #ffffff;
 }
 
 #footer .btn-signup {
-    background-color: #ff0077;
-    background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);
-    color: #ffffff;
+
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
@@ -376,6 +374,15 @@ nav ul li a.active {
 
     nav ul {
         flex-direction: row;
+    }
+
+    nav ul li {
+        margin: 0 10px;
+    }
+
+    .dropdown-content {
+        right: 0;
+        left: auto;
     }
 
     #hello {
