--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,17 +305,20 @@ nav ul li a.active {
 
 footer {
     width: 100%;
-    font-size: 0.8rem;
     background-color: #ff0077;
     background-image: linear-gradient(43deg, #ff0077 0%, #ffd900 199%);    
 }
 
 #footer {
-
     max-width: 96%;
     margin: 0 auto;
-
+    font-size: 0.8rem;
+    padding: 20px 0;
+    text-align: center;
     color: #ffffff;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
 }
 
 #footer .btn-signup {
@@ -325,15 +328,13 @@ footer {
     border-radius: 5px;
     font-weight: bold;
     border: 2px solid #ffffff;
-    box-shadow: 0 0 25px var(--main-color);
+    color: #F9F9F9;
 }
 
 #footer .btn-signup:hover {
     background-color: #ffd900;
-    transform: scale(1.05);
-    color: #F9F9F9;
+    text-decoration: none;
     box-shadow: 0 0 25px var(#ffd900), 0 0 50px var(#ff0077);
-    font-size: 1.2rem;
 }
 
 #footer .footer-signup {
@@ -350,7 +351,7 @@ footer {
 }
 
 #footer .footer-amazonlink a:hover {
-    color: #faeaff;
+    color: #ffd900;
     transform: scale(1.05);
 }
 
