--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
     padding: 0;
 }
 
+html,
 body {
     height: 100%;
     margin: 0;
@@ -15,7 +16,7 @@ body {
     flex-direction: column;
     background-color: #ffffff;
     color: #000000;
-    padding-top: 150px;
+    padding-top: 70px;
 }
 
 #hello {
@@ -279,7 +280,7 @@ nav ul li a.active {
 
 .contact-form button {
     padding: 10px 20px;
-    background-color: #5927e5;
+    background-color: #ff0077;
     color: #ffffff;
     border: none;
     border-radius: 4px;
@@ -288,9 +289,7 @@ nav ul li a.active {
 }
 
 .contact-form button:hover {
-    background-color: #3b1ca1;
-    transform: scale(1.05);
-}
+    transform: scale(1.05);}
 
 /* Footer Styles */
 
