--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,16 @@ body {
     padding-top: 70px;
 }
 
+#home a {
+    text-decoration: none;
+    color: #000000;
+    font-weight: bold;
+}
+
+#home a:hover {
+    color: #ff0077
+}
+
 #hello {
     padding-top: 1rem;
     padding-bottom: 1rem;
