--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,7 @@ nav ul li a.active {
 #home {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: end;
     gap: 1rem;
 }
 
@@ -187,6 +187,10 @@ nav ul li a.active {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
+}
+
+.post-date {
+    display: none;
 }
 
 /*includes the figcaption*/
